<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    todo: remove ingredients feature-->
<!--    <item android:id="@+id/recipe_add_ingredient_remove"-->
<!--        android:title="Remove ingredients"-->
<!--        android:icon="@drawable/ic_remove_24"-->
<!--        android:iconTint="@color/design_default_color_error"-->
<!--        app:showAsAction="ifRoom"/>-->
    <item android:id="@+id/recipe_add_ingredient_add"
        android:icon="@drawable/ic_add_24"
        android:title="Add an ingredient"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />
</menu>