<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/recipe_add"
        android:icon="@drawable/ic_add_top"
        android:title="AddRecipe"
        app:showAsAction = "ifRoom"
        />

    <item
        android:id="@+id/filter1"
        android:title="Sort by: Title"
        app:showAsAction = "never"
        />
    <item
        android:id="@+id/filter2"
        android:title="Sort by: Preparation Time"
        app:showAsAction = "never"
        />
    <item
        android:id="@+id/filter3"
        android:title="Sort by: Number of Servings"
        app:showAsAction = "never"
        />
    <item
        android:id="@+id/filter4"
        android:title="Sort by: Category"
        app:showAsAction = "never"
        />

</menu>