...
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        app:navGraph="@navigation/nav_graph"
        tools:layout="@layout/fragment_ingredient_list" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/action_bar"
        android:layout_width="409dp"
...
