...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_add_text_layout_comments"
        tools:layout_conversion_absoluteHeight="891dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/recipe_add_ingredients_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:minHeight="@android:dimen/app_icon_size"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
...
